--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,11 @@
 
 #content {
 	background-color: white;
-	height: 20vh;
+	height: fit-content;
 	width: fit-content;
-	margin: 20vh auto;
+	margin: 10vh auto;
 	border-radius: 20px;
-	padding: 0 20px;
+	padding: 10px 30px;
 }
 
 .nav a:hover {
