--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,33 @@
+@font-face {
+	font-family: 'HarryPotter';
+	src: url('./HarryP-MVZ6w.ttf') format('truetype'),
+	  url('./HarryP-MVZ6w.ttf') format('ttf');
+	font-weight: 600;
+	font-style: normal;
+  }
+  
 
+*{
+	padding: 0 10px;
+	text-align: center;
+}
+
+
+body {
+	font-family: "HarryPotter";
+}
+
+h1 {
+	font-size: 4rem;
+}
+
+h2, h3 {
+	font-size: 3rem;
+}
+
+p {
+	font-size: 2rem;
+}
 
 #content {
 	background-color: white;
@@ -10,11 +39,13 @@
 }
 
 .nav a:hover {
-	background-color: #ddd;
+	background-color: #736e6e;
+	cursor: pointer;
 	color: black;
   }
 
   .nav a.active {
-	background-color: #04AA6D;
-	color: white;
+	background-color: #3e8e41;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
   }
